2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/score.cc (Score): unprotect copy of Output_def. Plugs
	memory leak.

	* lily/parser.yy (score_body): don't clone Score, that's done in
	Lily_lexer::try_special_identifiers(). This fixes a memory leak.

	* lily/score-engraver.cc (derived_mark): new function.
	(initialize): unprotect Paper_score. This fixes a memory leak.

	* lily/score-performer.cc (derived_mark): new function.

	* lily/score-translator.cc (get_output): use SCM for get_output() call.

	* stepmake/aclocal.m4: put FlexLexer.h test in conftest.cc. Fixes
	spurious warning.

	* scm/font.scm (make-century-schoolbook-tree): use Sans for sans
	serif.

2005-05-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in (reloc_b): Add --enable-argv0-relocation.

2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/pfb.cc (LY_DEFINE): show file name when loading PFB. 

	* input/regression/alignment-order.ly: add Staff example.

2005-05-31  John Mandereau   <john.mandereau@free.fr>

	* po/fr.po: update.

2005-05-31  Graham Percival  <gperlist@shaw.ca>

	* Documentation/index.html.in: add link to LSR.

2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-stencil-commands.scm (Module): new file. Register all
	allowed stencil expression heads in a central place.

	* lily/stencil-scheme.cc (LY_DEFINE): check is_stencil_head in
	ly:make-stencil

	* lily/stencil-expression.cc (all_stencil_heads): registering
	stencil expressions.

	* lily/stencil-interpret.cc: new file. Stencil expression
	interpreting.

	* input/xiao-haizi-guai-guai.ly: move file back.

2005-05-30  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/advanced.itely, converters.itely,
	instrument-notation.itely, lilypond-book.itely: misc small
	changes.

2005-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lexer.ll: Skip UTF-8 BOM at BOF.

	* make/lilypond.fedora.spec.in: Fix source url.

	* cygwin: Update from mingw patches.
